# stardots-sdk-python

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
examples/: basic_usage.py
stardots_sdk/: __init__.py  constants.py  helper.py  stardots.py  types.py
tests/: test_stardots.py
