[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stardots-sdk-python"
version = "1.0.0"
description = "StarDots SDK for Python 3"
authors = [
    {name = "StarDots Team", email = "support@stardots.io"}
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "pydantic>=1.10.0"
]
readme = "README.md" 